<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:id="@+id/settings_bg"
    android:gravity="center_horizontal"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:paddingHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:onClick="backOnClick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff"
        android:onClick="settingOnclick" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_modify_type"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff"
        android:onClick="settingOnclick" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_modify_time"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff"
        android:onClick="settingOnclick" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message1"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_use"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#000000"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="#ffffff" />

</LinearLayout>